add new less var

--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -188,6 +188,10 @@
 @checkbox-check-color: #fff;
 @checkbox-border-width: @border-width-base;
 
+// Dropdown
+
+@dropdown-selected-color: @primary-color;
+
 // Empty
 @empty-font-size: @font-size-base;
 
